--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,7 +14,10 @@
   }
 
   .nav__logo {
-    padding-left: 1.6rem;
+    position: fixed;
+    top: 3.2rem;
+    left: 3.2rem;
+    z-index: 1;
   }
 
   .app-nav,
