--- a/css/style.css
+++ b/css/style.css
@@ -585,7 +585,7 @@ h3 {
 
 /*  */
 .app-nav {
-  padding: 0 5.2rem;
+  width: 100%;
   display: none;
   flex-direction: column;
   align-items: center;
