--- a/css/responsive.css
+++ b/css/responsive.css
@@ -56,4 +56,12 @@
   .btn {
     margin-bottom: 3.2rem;
   }
+
+  .heding {
+    padding-bottom: 1.6rem;
+  }
+
+  .card {
+    margin-bottom: 2.2rem;
+  }
 }
