--- a/css/style.css
+++ b/css/style.css
@@ -558,31 +558,6 @@ h3 {
   margin-right: 3.5rem;
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 1rem;
-  box-shadow: inset 0 0 5px var(--menu-color);
-}
-
-::-webkit-scrollbar-track {
-  border-radius: 10rem;
-  background: #f1f1f1;
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 10rem;
-  background: rgba(251, 144, 29, 0.6);
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: rgba(251, 144, 29, 0.8);
-}
-
-::selection {
-  color: #fff;
-  background-color: rgba(35, 200, 134, 0.8);
-}
-
 /*  */
 .app-nav {
   width: 100%;
@@ -617,6 +592,12 @@ h3 {
   font-size: 2.2rem;
   color: var(--white-color);
   text-decoration: none;
+  transition: all 0.3s;
+}
+
+.app-nav__menu .menu__link:hover {
+  text-shadow: rgba(251, 144, 29, 1) 1.5px 1.5px, rgba(251, 144, 29, 0.8) 3px 3px;
+  transform: translateY(-3px) scale(1.025) rotate(5deg);
 }
 
 .app-nav .nav__btn {
@@ -725,4 +706,34 @@ section {
 .circle-3 {
   bottom: 25%;
   right: 10rem;
+}
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 1rem;
+  box-shadow: inset 0 0 3px var(--menu-color);
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10rem;
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10rem;
+  background: rgba(251, 144, 29, 0.6);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(251, 144, 29, 0.8);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: rgba(251, 144, 29, 0.6);
+}
+
+::selection {
+  color: #fff;
+  background-color: rgba(35, 200, 134, 0.8);
 }
