--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@
   color: var(--orange-color);
   border-color: var(--orange-color);
   box-shadow: 2px 2px rgba(251, 144, 29, 0.4);
-  background-color: transparent;
+  background-color: var(--white-color);
 }
 
 .btn--orange:active {
@@ -301,8 +301,15 @@ h3 {
   border-radius: 0.6rem;
   -webkit-appearance: none;
   appearance: none;
+  outline: none;
   overflow: hidden;
   cursor: pointer;
+  transition: all 0.3s;
+}
+
+.explore__form .form__control:focus {
+  border-color: var(--orange-color);
+  box-shadow: rgba(251, 144, 29, 1) 1.5px 1.5px, rgba(251, 144, 29, 0.8) 3px 3px;
 }
 
 .explore__form .form__select-wrapper {
@@ -347,18 +354,24 @@ h3 {
   border-radius: 0.8rem;
   overflow: hidden;
   position: relative;
-  transition: all 0.3s;
+  transition: all 0.5s !important;
 }
 
-.picture-item:hover img {
-  transform: scale(1.5);
+.picture-item:hover {
+  box-shadow: rgba(0, 0, 0, 0.3) 3px -3px, rgba(0, 0, 0, 0.1) 6px -6px;
+  transform: translateY(-3px);
 }
+
 
 .picture-item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   transition: all 0.5s;
+}
+
+.picture-item:hover img {
+  transform: scale(1.5);
 }
 
 .text__box {
@@ -598,6 +611,10 @@ h3 {
 .app-nav__menu .menu__link:hover {
   text-shadow: rgba(251, 144, 29, 1) 1.5px 1.5px, rgba(251, 144, 29, 0.8) 3px 3px;
   transform: translateY(-3px) scale(1.025) rotate(5deg);
+}
+
+.app-nav__menu .menu__link:active {
+  transform: translateY(0);
 }
 
 .app-nav .nav__btn {
