--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,15 @@ h3 {
   font-size: 3.6rem;
 }
 
+input,
+textarea,
+.nav__icons,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 /* Header */
 .header {
   margin-top: 3.5rem;
@@ -594,12 +603,14 @@ h3 {
 }
 
 .app-nav .app-nav__menu {
+  width: 100%;
   margin-top: 10.2rem;
   list-style: none;
+  text-align: center;
 }
 
 .app-nav__menu .menu__link {
-  display: inline-block;
+  display: block;
   padding: 3.2rem 0;
   font-weight: 700;
   font-size: 2.2rem;
