--- a/css/style.css
+++ b/css/style.css
@@ -486,7 +486,7 @@ a {
   max-width: 26.6rem;
   height: 42rem;
   position: relative;
-
+  cursor: pointer;
 }
 
 .card .card__img {
@@ -498,6 +498,12 @@ a {
 .card .card__img img {
   width: 100%;
   height: 100%;
+  transform: rotate(15deg) scale(1.4);
+  transition: all 0.5s;
+}
+
+.card .card__img:hover img {
+  transform: rotate(0) scale(1);
 }
 
 .card .card__body {
@@ -519,6 +525,10 @@ a {
   border-bottom: 1px solid #C4C4C4;
 }
 
+.footer .footer__category .row {
+  align-items: start;
+}
+
 .footer .footer__logo {
   cursor: pointer;
   padding-right: 15rem;
@@ -535,7 +545,7 @@ a {
 
 
 .footer .footer__item {
-  margin-bottom: 2.2rem;
+  margin-bottom: 1.6rem;
   transition: all 0.3s
 }
 
@@ -544,7 +554,8 @@ a {
 }
 
 .footer .footer__link {
-  padding: 0.8rem 1.6rem;
+  display: block;
+  padding: 0.4rem 1.6rem;
   font-family: "Mulish";
   color: var(--black-light-color);
   font-weight: 300;
@@ -576,7 +587,6 @@ a {
   transition: all 0.3s;
 }
 
-.footer .footer__item:hover,
 .footer .footer__link:hover,
 .footer .footer__icon-link:hover i {
   text-shadow: 1px 1px rgba(32, 35, 54, 0.4);
@@ -584,7 +594,6 @@ a {
   transform: translateY(-3px) scale(1.025) rotate(5deg);
 }
 
-.footer .footer__item:active,
 .footer .footer__link:active,
 .footer .footer__icon-link:active i {
   transform: translateY(0);
